--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -103,7 +103,7 @@ jobs:
           export DB_CONNECTION=pgsql
           export DB_HOST=127.0.0.1
           export DB_PORT=5432
-          export DB_DATABASE=tesis_db
+          export DB_DATABASE=proyecto
           export DB_USERNAME=lotus
           export DB_PASSWORD=123456
           
